--- a/collaborative_filtering.ipynb
+++ b/collaborative_filtering.ipynb
@@ -2,26 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 263,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From /home/jewelle/anaconda3/lib/python3.7/site-packages/tensorflow/python/compat/v2_compat.py:96: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "non-resource variables are not supported in the long term\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from tqdm import tqdm #progress bar\n",
+    "from tqdm import tqdm\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
@@ -31,7 +21,8 @@
     "import tensorflow.compat.v1 as tf\n",
     "tf.disable_v2_behavior() \n",
     "from tensorflow.python.framework import ops\n",
-    "from collections import Counter\n"
+    "from collections import Counter\n",
+    "import pickle"
    ]
   },
   {
@@ -660,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +718,7 @@
        "popular_tags    102  0.001817"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 264,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +886,7 @@
        "12807  Action,Free to Play,Strategy        4  "
       ]
      },
-     "execution_count": 187,
+     "execution_count": 266,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +964,7 @@
        "publisher         0      0.0"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 267,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -988,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -998,19 +989,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#also filter for games with user count >50\n",
+    "#also filter for games with user count > 20\n",
     "steam_df.groupby('game')['userID'].count()\n",
     "\n",
-    "steam_train = steam_df[steam_df.groupby('game').userID.transform('count')>49].copy()"
+    "steam_train = steam_df[steam_df.groupby('game').userID.transform('count')>19].copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
@@ -1043,15 +1034,12 @@
        "      <th>popular_tags</th>\n",
        "      <th>game_details</th>\n",
        "      <th>genre</th>\n",
-       "      <th>game_id_x</th>\n",
-       "      <th>game_id_y</th>\n",
-       "      <th>user_id</th>\n",
        "      <th>gameIdx</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>51896</th>\n",
        "      <td>5250</td>\n",
        "      <td>Alien Swarm</td>\n",
        "      <td>4.9</td>\n",
@@ -1061,13 +1049,10 @@
        "      <td>Free to Play,Co-op,Action,Multiplayer,Aliens,O...</td>\n",
        "      <td>Single-player,Multi-player,Co-op,Steam Achieve...</td>\n",
        "      <td>Action</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>27686</th>\n",
        "      <td>5250</td>\n",
        "      <td>Portal 2</td>\n",
        "      <td>13.6</td>\n",
@@ -1077,101 +1062,103 @@
        "      <td>Puzzle,Co-op,First-Person,Sci-fi,Comedy,Single...</td>\n",
        "      <td>Single-player,Co-op,Steam Achievements,Full co...</td>\n",
        "      <td>Action,Adventure</td>\n",
-       "      <td>54</td>\n",
-       "      <td>54</td>\n",
-       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34318</th>\n",
+       "      <td>76767</td>\n",
+       "      <td>Banished</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>Very Positive,(23,931),- 89% of the 23,931 use...</td>\n",
+       "      <td>Shining Rock Software LLC</td>\n",
+       "      <td>Shining Rock Software LLC,Shining Rock Softwar...</td>\n",
+       "      <td>City Builder,Strategy,Simulation,Survival,Indi...</td>\n",
+       "      <td>Single-player,Steam Achievements</td>\n",
+       "      <td>Indie,Simulation,Strategy</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58286</th>\n",
+       "      <td>76767</td>\n",
+       "      <td>Counter-Strike</td>\n",
+       "      <td>365.0</td>\n",
+       "      <td>Overwhelmingly Positive,(66,438),- 96% of the ...</td>\n",
+       "      <td>Valve</td>\n",
+       "      <td>Valve,Valve</td>\n",
+       "      <td>Action,FPS,Multiplayer,Shooter,Classic,Team-Ba...</td>\n",
+       "      <td>Multi-player,Online Multi-Player,Local Multi-P...</td>\n",
+       "      <td>Action</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>975449</td>\n",
-       "      <td>Alien Swarm</td>\n",
-       "      <td>9.8</td>\n",
-       "      <td>Very Positive,(18,439),- 94% of the 18,439 use...</td>\n",
-       "      <td>Valve</td>\n",
-       "      <td>Valve,Valve</td>\n",
-       "      <td>Free to Play,Co-op,Action,Multiplayer,Aliens,O...</td>\n",
-       "      <td>Single-player,Multi-player,Co-op,Steam Achieve...</td>\n",
-       "      <td>Action</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>14</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>975449</td>\n",
+       "      <th>27625</th>\n",
+       "      <td>76767</td>\n",
        "      <td>Portal 2</td>\n",
-       "      <td>44.0</td>\n",
+       "      <td>15.0</td>\n",
        "      <td>Overwhelmingly Positive,(104,354),- 98% of the...</td>\n",
        "      <td>Valve</td>\n",
        "      <td>Valve,Valve</td>\n",
        "      <td>Puzzle,Co-op,First-Person,Sci-fi,Comedy,Single...</td>\n",
        "      <td>Single-player,Co-op,Steam Achievements,Full co...</td>\n",
        "      <td>Action,Adventure</td>\n",
-       "      <td>54</td>\n",
-       "      <td>54</td>\n",
-       "      <td>14</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>975449</td>\n",
-       "      <td>Left 4 Dead 2</td>\n",
-       "      <td>212.0</td>\n",
-       "      <td>Overwhelmingly Positive,(156,890),- 96% of the...</td>\n",
-       "      <td>Valve</td>\n",
-       "      <td>Valve,Valve</td>\n",
-       "      <td>Zombies,Co-op,FPS,Multiplayer,Shooter,Action,O...</td>\n",
-       "      <td>Single-player,Multi-player,Co-op,Steam Achieve...</td>\n",
-       "      <td>Action</td>\n",
-       "      <td>42</td>\n",
-       "      <td>42</td>\n",
-       "      <td>14</td>\n",
-       "      <td>2</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   userID           game  hours_played  \\\n",
-       "0    5250    Alien Swarm           4.9   \n",
-       "1    5250       Portal 2          13.6   \n",
-       "2  975449    Alien Swarm           9.8   \n",
-       "3  975449       Portal 2          44.0   \n",
-       "4  975449  Left 4 Dead 2         212.0   \n",
+       "       userID            game  hours_played  \\\n",
+       "51896    5250     Alien Swarm           4.9   \n",
+       "27686    5250        Portal 2          13.6   \n",
+       "34318   76767        Banished          24.0   \n",
+       "58286   76767  Counter-Strike         365.0   \n",
+       "27625   76767        Portal 2          15.0   \n",
        "\n",
-       "                                         all_reviews developer    publisher  \\\n",
-       "0  Very Positive,(18,439),- 94% of the 18,439 use...     Valve  Valve,Valve   \n",
-       "1  Overwhelmingly Positive,(104,354),- 98% of the...     Valve  Valve,Valve   \n",
-       "2  Very Positive,(18,439),- 94% of the 18,439 use...     Valve  Valve,Valve   \n",
-       "3  Overwhelmingly Positive,(104,354),- 98% of the...     Valve  Valve,Valve   \n",
-       "4  Overwhelmingly Positive,(156,890),- 96% of the...     Valve  Valve,Valve   \n",
+       "                                             all_reviews  \\\n",
+       "51896  Very Positive,(18,439),- 94% of the 18,439 use...   \n",
+       "27686  Overwhelmingly Positive,(104,354),- 98% of the...   \n",
+       "34318  Very Positive,(23,931),- 89% of the 23,931 use...   \n",
+       "58286  Overwhelmingly Positive,(66,438),- 96% of the ...   \n",
+       "27625  Overwhelmingly Positive,(104,354),- 98% of the...   \n",
        "\n",
-       "                                        popular_tags  \\\n",
-       "0  Free to Play,Co-op,Action,Multiplayer,Aliens,O...   \n",
-       "1  Puzzle,Co-op,First-Person,Sci-fi,Comedy,Single...   \n",
-       "2  Free to Play,Co-op,Action,Multiplayer,Aliens,O...   \n",
-       "3  Puzzle,Co-op,First-Person,Sci-fi,Comedy,Single...   \n",
-       "4  Zombies,Co-op,FPS,Multiplayer,Shooter,Action,O...   \n",
+       "                       developer  \\\n",
+       "51896                      Valve   \n",
+       "27686                      Valve   \n",
+       "34318  Shining Rock Software LLC   \n",
+       "58286                      Valve   \n",
+       "27625                      Valve   \n",
        "\n",
-       "                                        game_details             genre  \\\n",
-       "0  Single-player,Multi-player,Co-op,Steam Achieve...            Action   \n",
-       "1  Single-player,Co-op,Steam Achievements,Full co...  Action,Adventure   \n",
-       "2  Single-player,Multi-player,Co-op,Steam Achieve...            Action   \n",
-       "3  Single-player,Co-op,Steam Achievements,Full co...  Action,Adventure   \n",
-       "4  Single-player,Multi-player,Co-op,Steam Achieve...            Action   \n",
+       "                                               publisher  \\\n",
+       "51896                                        Valve,Valve   \n",
+       "27686                                        Valve,Valve   \n",
+       "34318  Shining Rock Software LLC,Shining Rock Softwar...   \n",
+       "58286                                        Valve,Valve   \n",
+       "27625                                        Valve,Valve   \n",
        "\n",
-       "   game_id_x  game_id_y  user_id  gameIdx  \n",
-       "0          4          4        0        0  \n",
-       "1         54         54        0        1  \n",
-       "2          4          4       14        0  \n",
-       "3         54         54       14        1  \n",
-       "4         42         42       14        2  "
+       "                                            popular_tags  \\\n",
+       "51896  Free to Play,Co-op,Action,Multiplayer,Aliens,O...   \n",
+       "27686  Puzzle,Co-op,First-Person,Sci-fi,Comedy,Single...   \n",
+       "34318  City Builder,Strategy,Simulation,Survival,Indi...   \n",
+       "58286  Action,FPS,Multiplayer,Shooter,Classic,Team-Ba...   \n",
+       "27625  Puzzle,Co-op,First-Person,Sci-fi,Comedy,Single...   \n",
+       "\n",
+       "                                            game_details  \\\n",
+       "51896  Single-player,Multi-player,Co-op,Steam Achieve...   \n",
+       "27686  Single-player,Co-op,Steam Achievements,Full co...   \n",
+       "34318                   Single-player,Steam Achievements   \n",
+       "58286  Multi-player,Online Multi-Player,Local Multi-P...   \n",
+       "27625  Single-player,Co-op,Steam Achievements,Full co...   \n",
+       "\n",
+       "                           genre  gameIdx  \n",
+       "51896                     Action        0  \n",
+       "27686           Action,Adventure        8  \n",
+       "34318  Indie,Simulation,Strategy       13  \n",
+       "58286                     Action        1  \n",
+       "27625           Action,Adventure        8  "
       ]
      },
-     "execution_count": 242,
+     "execution_count": 270,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1182,14 +1169,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 6307 users and 80 games in the data\n"
+      "There are 6521 users and 174 games in the data\n"
      ]
     }
    ],
@@ -1202,14 +1189,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.21% of the user-item matrix is filled\n"
+      "1.69% of the user-item matrix is filled\n"
      ]
     }
    ],
@@ -1221,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1236,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1249,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1260,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1275,14 +1262,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "346 users bought 10 or more games\n"
+      "456 users bought 10 or more games\n"
      ]
     }
    ],
@@ -1297,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1309,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1319,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1335,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1350,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [
     {
@@ -1359,7 +1346,7 @@
        "array([1., 1., 1., 1., 1.])"
       ]
      },
-     "execution_count": 249,
+     "execution_count": 282,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1370,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1383,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1395,7 +1382,7 @@
     "# The Y matrix represents the game latent features with a shape of game x latent features\n",
     "Y = tf.Variable(tf.truncated_normal([n_games, n_features], mean = 0, stddev = 0.05))\n",
     "\n",
-    "# Here's the initilization of the confidence parameter\n",
+    "#initilization of the confidence parameter\n",
     "conf_alpha = tf.Variable(tf.random_uniform([1], 0, 1))"
    ]
   },
