--- a/collaborative_filtering.ipynb
+++ b/collaborative_filtering.ipynb
@@ -1388,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1404,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1420,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1432,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1444,7 +1444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1454,7 +1454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1475,23 +1475,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iterations 0... Training Loss 817776.00... Train Precision 0.131... Val Precision 0.040\n",
-      "Iterations 10... Training Loss 42353.01... Train Precision 0.629... Val Precision 0.023\n",
-      "Iterations 20... Training Loss 25515.68... Train Precision 0.754... Val Precision 0.006\n",
-      "Iterations 30... Training Loss 20027.94... Train Precision 0.823... Val Precision 0.000\n",
-      "Iterations 40... Training Loss 17150.36... Train Precision 0.863... Val Precision 0.000\n",
-      "Iterations 50... Training Loss 15357.13... Train Precision 0.863... Val Precision 0.000\n",
-      "Iterations 60... Training Loss 14133.27... Train Precision 0.869... Val Precision 0.000\n",
-      "Iterations 70... Training Loss 13242.78... Train Precision 0.880... Val Precision 0.000\n",
-      "Iterations 80... Training Loss 12562.63... Train Precision 0.880... Val Precision 0.000\n",
-      "Iterations 90... Training Loss 12015.88... Train Precision 0.869... Val Precision 0.000\n",
+      "Iterations 0... Training Loss 1166758.25... Train Precision 0.126... Val Precision 0.074\n",
+      "Iterations 10... Training Loss 72578.23... Train Precision 0.617... Val Precision 0.009\n",
+      "Iterations 20... Training Loss 49959.28... Train Precision 0.704... Val Precision 0.009\n",
+      "Iterations 30... Training Loss 41471.16... Train Precision 0.726... Val Precision 0.009\n",
+      "Iterations 40... Training Loss 36905.39... Train Precision 0.743... Val Precision 0.004\n",
+      "Iterations 50... Training Loss 33977.66... Train Precision 0.761... Val Precision 0.004\n",
+      "Iterations 60... Training Loss 31931.21... Train Precision 0.778... Val Precision 0.000\n",
+      "Iterations 70... Training Loss 30416.03... Train Precision 0.800... Val Precision 0.000\n",
+      "Iterations 80... Training Loss 29234.18... Train Precision 0.826... Val Precision 0.000\n",
+      "Iterations 90... Training Loss 28294.54... Train Precision 0.835... Val Precision 0.000\n",
       "\n",
       "\n",
       "Test Precision 0.000\n"
@@ -1529,7 +1529,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 293,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1540,72 +1547,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "User #46637811 recommendations ...\n",
+      "User #83090686 recommendations ...\n",
       "Recommendations\n",
-      "Killing Floor, Clicker Heroes, Don't Starve, BioShock Infinite, Company of Heroes 2\n",
+      "Clicker Heroes, Trove, PAYDAY 2, Counter-Strike, DayZ\n",
       "\n",
       "\n",
       "Actual purchases\n",
-      "Left 4 Dead 2, Portal, Warframe, Path of Exile, Trove\n",
+      "Portal 2, Left 4 Dead 2, Don't Starve, Scribblenauts Unlimited, Gunpoint\n",
       "\n",
       "\n",
       "Precision of 0.0\n",
       "--------------------------------------\n",
       "\n",
       "\n",
-      "User #35729292 recommendations ...\n",
+      "User #100519466 recommendations ...\n",
       "Recommendations\n",
-      "Portal 2, Terraria, Half-Life 2, Garry's Mod, Mafia II\n",
+      "War Thunder, Counter-Strike, Left 4 Dead 2, Dota 2, PlanetSide 2\n",
       "\n",
       "\n",
       "Actual purchases\n",
-      "Left 4 Dead 2, Hotline Miami, Killing Floor, Left 4 Dead, Dota 2\n",
+      "Portal 2, Don't Starve, Garry's Mod, PlanetSide 2, Euro Truck Simulator 2\n",
+      "\n",
+      "\n",
+      "Precision of 0.2\n",
+      "--------------------------------------\n",
+      "\n",
+      "\n",
+      "User #64973908 recommendations ...\n",
+      "Recommendations\n",
+      "Sniper Elite V2, L.A. Noire, The Wolf Among Us, Left 4 Dead, Alan Wake\n",
+      "\n",
+      "\n",
+      "Actual purchases\n",
+      "PAYDAY 2, Dungeon Defenders II, Euro Truck Simulator 2, Saints Row IV, Bastion\n",
       "\n",
       "\n",
       "Precision of 0.0\n",
       "--------------------------------------\n",
       "\n",
       "\n",
-      "User #108007732 recommendations ...\n",
+      "User #68809194 recommendations ...\n",
       "Recommendations\n",
-      "Grand Theft Auto IV, Portal, The Binding of Isaac, Counter-Strike, APB Reloaded\n",
+      "Killing Floor, Grand Theft Auto IV, Borderlands 2, Counter-Strike, War Thunder\n",
       "\n",
       "\n",
       "Actual purchases\n",
-      "Team Fortress 2, Borderlands 2, Fallout 4, Grand Theft Auto V, Besiege\n",
+      "Mass Effect 2, Team Fortress 2, Dota 2, The Stanley Parable, Guns of Icarus Online\n",
       "\n",
       "\n",
       "Precision of 0.0\n",
       "--------------------------------------\n",
       "\n",
       "\n",
-      "User #11794760 recommendations ...\n",
+      "User #108114779 recommendations ...\n",
       "Recommendations\n",
-      "Borderlands 2, PAYDAY 2, Starbound, Saints Row IV, Euro Truck Simulator 2\n",
+      "Portal 2, Killing Floor, Star Trek Online, Robocraft, Alien Swarm\n",
       "\n",
       "\n",
       "Actual purchases\n",
-      "Team Fortress 2, Torchlight, Left 4 Dead, Dungeon Defenders, Kerbal Space Program\n",
+      "Borderlands 2, PAYDAY 2, Team Fortress 2, Dota 2, Goat Simulator\n",
       "\n",
       "\n",
       "Precision of 0.0\n",
       "--------------------------------------\n",
       "\n",
       "\n",
-      "User #102295765 recommendations ...\n",
+      "User #182229935 recommendations ...\n",
       "Recommendations\n",
-      "Grand Theft Auto V, Counter-Strike, Unturned, Grand Theft Auto IV, APB Reloaded\n",
+      "Left 4 Dead 2, Supreme Commander 2, Alien Swarm, Clicker Heroes, Counter-Strike\n",
       "\n",
       "\n",
       "Actual purchases\n",
-      "Left 4 Dead 2, Terraria, Dungeon Defenders II, Garry's Mod, Insurgency\n",
+      "Garry's Mod, PlanetSide 2, Insurgency, Dino D-Day, AdVenture Capitalist\n",
       "\n",
       "\n",
       "Precision of 0.0\n",
@@ -1614,63 +1634,50 @@
       "\n",
       "User #43913966 recommendations ...\n",
       "Recommendations\n",
-      "Portal, Mafia II, Robocraft, Grand Theft Auto IV, APB Reloaded\n",
+      "Banished, Counter-Strike, War Thunder, Mass Effect 2, Supreme Commander 2\n",
       "\n",
       "\n",
       "Actual purchases\n",
-      "Terraria, Borderlands 2, Garry's Mod, Don't Starve, Kerbal Space Program\n",
+      "Alien Swarm, Garry's Mod, Unturned, Grand Theft Auto V, Contagion\n",
       "\n",
       "\n",
       "Precision of 0.0\n",
       "--------------------------------------\n",
       "\n",
       "\n",
-      "User #97614578 recommendations ...\n",
+      "User #159371621 recommendations ...\n",
       "Recommendations\n",
-      "DayZ, Neverwinter, Just Cause 2, Fallout 4, Rust\n",
+      "PAYDAY 2, Team Fortress 2, Dishonored, Fallout 4, Magicka\n",
       "\n",
       "\n",
       "Actual purchases\n",
-      "PAYDAY 2, Heroes & Generals, Euro Truck Simulator 2, Robocraft, Unturned\n",
+      "Banished, Far Cry 3, Euro Truck Simulator 2, Farming Simulator 15, Outlast\n",
       "\n",
       "\n",
       "Precision of 0.0\n",
       "--------------------------------------\n",
       "\n",
       "\n",
-      "User #17530772 recommendations ...\n",
+      "User #152959594 recommendations ...\n",
       "Recommendations\n",
-      "Far Cry 3, Just Cause 2, War Thunder, Orcs Must Die! 2, Arma 3\n",
+      "Unturned, Robocraft, Euro Truck Simulator 2, PAYDAY 2, Portal 2\n",
       "\n",
       "\n",
       "Actual purchases\n",
-      "Killing Floor, Fallout 4, Garry's Mod, Kerbal Space Program, L.A. Noire\n",
+      "Team Fortress 2, War Thunder, Dota 2, Defiance, Heroes & Generals\n",
       "\n",
       "\n",
       "Precision of 0.0\n",
       "--------------------------------------\n",
       "\n",
       "\n",
-      "User #63441290 recommendations ...\n",
+      "User #57103808 recommendations ...\n",
       "Recommendations\n",
-      "Dying Light, Just Cause 2, Torchlight II, The Forest, Orcs Must Die! 2\n",
+      "Euro Truck Simulator 2, DayZ, Resident Evil 6 / Biohazard 6, Supreme Commander 2, Space Engineers\n",
       "\n",
       "\n",
       "Actual purchases\n",
-      "Max Payne 3, Tomb Raider, Dota 2, Saints Row IV, L.A. Noire\n",
-      "\n",
-      "\n",
-      "Precision of 0.0\n",
-      "--------------------------------------\n",
-      "\n",
-      "\n",
-      "User #101687527 recommendations ...\n",
-      "Recommendations\n",
-      "Rust, Left 4 Dead 2, Insurgency, Tomb Raider, Killing Floor\n",
-      "\n",
-      "\n",
-      "Actual purchases\n",
-      "Portal 2, Half-Life 2, Borderlands 2, PAYDAY 2, Robocraft\n",
+      "Banished, Terraria, Killing Floor, Company of Heroes, Heroes & Generals\n",
       "\n",
       "\n",
       "Precision of 0.0\n",
