updated content model.

--- a/content_based.ipynb
+++ b/content_based.ipynb
@@ -1211,14 +1211,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_recommendation = 5\n",
-    "\n",
-    "col_names = list(map(str, range(1, n_recommendation + 1)))\n",
-    "col_names = ['userID'] + col_names"
+    "n_recommendation = 5"
    ]
   },
   {
