updated content model.

--- a/content_based.ipynb
+++ b/content_based.ipynb
@@ -1282,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1298,7 +1298,7 @@
     "    listSuggestion = list()\n",
     "    listGamesUserHas = list()\n",
     "\n",
-    "    # loop on all row and get recommendations for user\n",
+    "    # loop on all rows and get recommendations for user\n",
     "    for j, row in steam_train.iterrows():\n",
     "        if previousId != row[\"userID\"]:\n",
     "            recommendationByUserData = pd.concat([recommendationByUserData,\n",
