updated content model.

--- a/content_based.ipynb
+++ b/content_based.ipynb
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -672,12 +672,18 @@
        "      <th>userID</th>\n",
        "      <th>game</th>\n",
        "      <th>hours_played</th>\n",
-       "      <th>all_reviews</th>\n",
        "      <th>developer</th>\n",
        "      <th>publisher</th>\n",
-       "      <th>popular_tags</th>\n",
+       "      <th>tags</th>\n",
        "      <th>game_details</th>\n",
        "      <th>genre</th>\n",
+       "      <th>ID</th>\n",
+       "      <th>genre_publisher_developer</th>\n",
+       "      <th>genre_tags_developer</th>\n",
+       "      <th>genre_tags_game_details</th>\n",
+       "      <th>genre_publisher_developer_game_details</th>\n",
+       "      <th>percentage_positive_review</th>\n",
+       "      <th>review_qualification</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -686,117 +692,168 @@
        "      <td>5250</td>\n",
        "      <td>Alien Swarm</td>\n",
        "      <td>4.9</td>\n",
-       "      <td>Very Positive,(18,439),- 94% of the 18,439 use...</td>\n",
        "      <td>Valve</td>\n",
        "      <td>Valve,Valve</td>\n",
-       "      <td>Free to Play,Co-op,Action,Multiplayer,Aliens,O...</td>\n",
-       "      <td>Single-player,Multi-player,Co-op,Steam Achieve...</td>\n",
+       "      <td>FreetoPlay,Co-op,Action,Multiplayer,Aliens,Onl...</td>\n",
+       "      <td>Single-player,Multi-player,Co-op,SteamAchievem...</td>\n",
        "      <td>Action</td>\n",
+       "      <td>alienswarm</td>\n",
+       "      <td>ActionValve,ValveValve</td>\n",
+       "      <td>ActionFreetoPlay,Co-op,Action,Multiplayer,Alie...</td>\n",
+       "      <td>ActionFreetoPlay,Co-op,Action,Multiplayer,Alie...</td>\n",
+       "      <td>ActionValve,ValveValveSingle-player,Multi-play...</td>\n",
+       "      <td>94</td>\n",
+       "      <td>Very Positive</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27686</th>\n",
        "      <td>5250</td>\n",
        "      <td>Portal 2</td>\n",
        "      <td>13.6</td>\n",
-       "      <td>Overwhelmingly Positive,(104,354),- 98% of the...</td>\n",
        "      <td>Valve</td>\n",
        "      <td>Valve,Valve</td>\n",
        "      <td>Puzzle,Co-op,First-Person,Sci-fi,Comedy,Single...</td>\n",
-       "      <td>Single-player,Co-op,Steam Achievements,Full co...</td>\n",
+       "      <td>Single-player,Co-op,SteamAchievements,Fullcont...</td>\n",
        "      <td>Action,Adventure</td>\n",
+       "      <td>portal2</td>\n",
+       "      <td>Action,AdventureValve,ValveValve</td>\n",
+       "      <td>Action,AdventurePuzzle,Co-op,First-Person,Sci-...</td>\n",
+       "      <td>Action,AdventurePuzzle,Co-op,First-Person,Sci-...</td>\n",
+       "      <td>Action,AdventureValve,ValveValveSingle-player,...</td>\n",
+       "      <td>98</td>\n",
+       "      <td>Overwhelmingly Positive</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>34318</th>\n",
        "      <td>76767</td>\n",
        "      <td>Banished</td>\n",
        "      <td>24.0</td>\n",
-       "      <td>Very Positive,(23,931),- 89% of the 23,931 use...</td>\n",
-       "      <td>Shining Rock Software LLC</td>\n",
-       "      <td>Shining Rock Software LLC,Shining Rock Softwar...</td>\n",
-       "      <td>City Builder,Strategy,Simulation,Survival,Indi...</td>\n",
-       "      <td>Single-player,Steam Achievements</td>\n",
+       "      <td>ShiningRockSoftwareLLC</td>\n",
+       "      <td>ShiningRockSoftwareLLC,ShiningRockSoftwareLLC</td>\n",
+       "      <td>CityBuilder,Strategy,Simulation,Survival,Indie...</td>\n",
+       "      <td>Single-player,SteamAchievements</td>\n",
        "      <td>Indie,Simulation,Strategy</td>\n",
+       "      <td>banished</td>\n",
+       "      <td>Indie,Simulation,StrategyShiningRockSoftwareLL...</td>\n",
+       "      <td>Indie,Simulation,StrategyCityBuilder,Strategy,...</td>\n",
+       "      <td>Indie,Simulation,StrategyCityBuilder,Strategy,...</td>\n",
+       "      <td>Indie,Simulation,StrategyShiningRockSoftwareLL...</td>\n",
+       "      <td>89</td>\n",
+       "      <td>Very Positive</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>58286</th>\n",
        "      <td>76767</td>\n",
        "      <td>Counter-Strike</td>\n",
        "      <td>365.0</td>\n",
-       "      <td>Overwhelmingly Positive,(66,438),- 96% of the ...</td>\n",
        "      <td>Valve</td>\n",
        "      <td>Valve,Valve</td>\n",
        "      <td>Action,FPS,Multiplayer,Shooter,Classic,Team-Ba...</td>\n",
-       "      <td>Multi-player,Online Multi-Player,Local Multi-P...</td>\n",
+       "      <td>Multi-player,OnlineMulti-Player,LocalMulti-Pla...</td>\n",
        "      <td>Action</td>\n",
+       "      <td>counterstrike</td>\n",
+       "      <td>ActionValve,ValveValve</td>\n",
+       "      <td>ActionAction,FPS,Multiplayer,Shooter,Classic,T...</td>\n",
+       "      <td>ActionAction,FPS,Multiplayer,Shooter,Classic,T...</td>\n",
+       "      <td>ActionValve,ValveValveMulti-player,OnlineMulti...</td>\n",
+       "      <td>96</td>\n",
+       "      <td>Overwhelmingly Positive</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27625</th>\n",
        "      <td>76767</td>\n",
        "      <td>Portal 2</td>\n",
        "      <td>15.0</td>\n",
-       "      <td>Overwhelmingly Positive,(104,354),- 98% of the...</td>\n",
        "      <td>Valve</td>\n",
        "      <td>Valve,Valve</td>\n",
        "      <td>Puzzle,Co-op,First-Person,Sci-fi,Comedy,Single...</td>\n",
-       "      <td>Single-player,Co-op,Steam Achievements,Full co...</td>\n",
+       "      <td>Single-player,Co-op,SteamAchievements,Fullcont...</td>\n",
        "      <td>Action,Adventure</td>\n",
+       "      <td>portal2</td>\n",
+       "      <td>Action,AdventureValve,ValveValve</td>\n",
+       "      <td>Action,AdventurePuzzle,Co-op,First-Person,Sci-...</td>\n",
+       "      <td>Action,AdventurePuzzle,Co-op,First-Person,Sci-...</td>\n",
+       "      <td>Action,AdventureValve,ValveValveSingle-player,...</td>\n",
+       "      <td>98</td>\n",
+       "      <td>Overwhelmingly Positive</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       userID            game  hours_played  \\\n",
-       "51896    5250     Alien Swarm           4.9   \n",
-       "27686    5250        Portal 2          13.6   \n",
-       "34318   76767        Banished          24.0   \n",
-       "58286   76767  Counter-Strike         365.0   \n",
-       "27625   76767        Portal 2          15.0   \n",
+       "       userID            game  hours_played               developer  \\\n",
+       "51896    5250     Alien Swarm           4.9                   Valve   \n",
+       "27686    5250        Portal 2          13.6                   Valve   \n",
+       "34318   76767        Banished          24.0  ShiningRockSoftwareLLC   \n",
+       "58286   76767  Counter-Strike         365.0                   Valve   \n",
+       "27625   76767        Portal 2          15.0                   Valve   \n",
        "\n",
-       "                                             all_reviews  \\\n",
-       "51896  Very Positive,(18,439),- 94% of the 18,439 use...   \n",
-       "27686  Overwhelmingly Positive,(104,354),- 98% of the...   \n",
-       "34318  Very Positive,(23,931),- 89% of the 23,931 use...   \n",
-       "58286  Overwhelmingly Positive,(66,438),- 96% of the ...   \n",
-       "27625  Overwhelmingly Positive,(104,354),- 98% of the...   \n",
+       "                                           publisher  \\\n",
+       "51896                                    Valve,Valve   \n",
+       "27686                                    Valve,Valve   \n",
+       "34318  ShiningRockSoftwareLLC,ShiningRockSoftwareLLC   \n",
+       "58286                                    Valve,Valve   \n",
+       "27625                                    Valve,Valve   \n",
        "\n",
-       "                       developer  \\\n",
-       "51896                      Valve   \n",
-       "27686                      Valve   \n",
-       "34318  Shining Rock Software LLC   \n",
-       "58286                      Valve   \n",
-       "27625                      Valve   \n",
-       "\n",
-       "                                               publisher  \\\n",
-       "51896                                        Valve,Valve   \n",
-       "27686                                        Valve,Valve   \n",
-       "34318  Shining Rock Software LLC,Shining Rock Softwar...   \n",
-       "58286                                        Valve,Valve   \n",
-       "27625                                        Valve,Valve   \n",
-       "\n",
-       "                                            popular_tags  \\\n",
-       "51896  Free to Play,Co-op,Action,Multiplayer,Aliens,O...   \n",
+       "                                                    tags  \\\n",
+       "51896  FreetoPlay,Co-op,Action,Multiplayer,Aliens,Onl...   \n",
        "27686  Puzzle,Co-op,First-Person,Sci-fi,Comedy,Single...   \n",
-       "34318  City Builder,Strategy,Simulation,Survival,Indi...   \n",
+       "34318  CityBuilder,Strategy,Simulation,Survival,Indie...   \n",
        "58286  Action,FPS,Multiplayer,Shooter,Classic,Team-Ba...   \n",
        "27625  Puzzle,Co-op,First-Person,Sci-fi,Comedy,Single...   \n",
        "\n",
        "                                            game_details  \\\n",
-       "51896  Single-player,Multi-player,Co-op,Steam Achieve...   \n",
-       "27686  Single-player,Co-op,Steam Achievements,Full co...   \n",
-       "34318                   Single-player,Steam Achievements   \n",
-       "58286  Multi-player,Online Multi-Player,Local Multi-P...   \n",
-       "27625  Single-player,Co-op,Steam Achievements,Full co...   \n",
+       "51896  Single-player,Multi-player,Co-op,SteamAchievem...   \n",
+       "27686  Single-player,Co-op,SteamAchievements,Fullcont...   \n",
+       "34318                    Single-player,SteamAchievements   \n",
+       "58286  Multi-player,OnlineMulti-Player,LocalMulti-Pla...   \n",
+       "27625  Single-player,Co-op,SteamAchievements,Fullcont...   \n",
        "\n",
-       "                           genre  \n",
-       "51896                     Action  \n",
-       "27686           Action,Adventure  \n",
-       "34318  Indie,Simulation,Strategy  \n",
-       "58286                     Action  \n",
-       "27625           Action,Adventure  "
+       "                           genre             ID  \\\n",
+       "51896                     Action     alienswarm   \n",
+       "27686           Action,Adventure        portal2   \n",
+       "34318  Indie,Simulation,Strategy       banished   \n",
+       "58286                     Action  counterstrike   \n",
+       "27625           Action,Adventure        portal2   \n",
+       "\n",
+       "                               genre_publisher_developer  \\\n",
+       "51896                             ActionValve,ValveValve   \n",
+       "27686                   Action,AdventureValve,ValveValve   \n",
+       "34318  Indie,Simulation,StrategyShiningRockSoftwareLL...   \n",
+       "58286                             ActionValve,ValveValve   \n",
+       "27625                   Action,AdventureValve,ValveValve   \n",
+       "\n",
+       "                                    genre_tags_developer  \\\n",
+       "51896  ActionFreetoPlay,Co-op,Action,Multiplayer,Alie...   \n",
+       "27686  Action,AdventurePuzzle,Co-op,First-Person,Sci-...   \n",
+       "34318  Indie,Simulation,StrategyCityBuilder,Strategy,...   \n",
+       "58286  ActionAction,FPS,Multiplayer,Shooter,Classic,T...   \n",
+       "27625  Action,AdventurePuzzle,Co-op,First-Person,Sci-...   \n",
+       "\n",
+       "                                 genre_tags_game_details  \\\n",
+       "51896  ActionFreetoPlay,Co-op,Action,Multiplayer,Alie...   \n",
+       "27686  Action,AdventurePuzzle,Co-op,First-Person,Sci-...   \n",
+       "34318  Indie,Simulation,StrategyCityBuilder,Strategy,...   \n",
+       "58286  ActionAction,FPS,Multiplayer,Shooter,Classic,T...   \n",
+       "27625  Action,AdventurePuzzle,Co-op,First-Person,Sci-...   \n",
+       "\n",
+       "                  genre_publisher_developer_game_details  \\\n",
+       "51896  ActionValve,ValveValveSingle-player,Multi-play...   \n",
+       "27686  Action,AdventureValve,ValveValveSingle-player,...   \n",
+       "34318  Indie,Simulation,StrategyShiningRockSoftwareLL...   \n",
+       "58286  ActionValve,ValveValveMulti-player,OnlineMulti...   \n",
+       "27625  Action,AdventureValve,ValveValveSingle-player,...   \n",
+       "\n",
+       "      percentage_positive_review     review_qualification  \n",
+       "51896                         94            Very Positive  \n",
+       "27686                         98  Overwhelmingly Positive  \n",
+       "34318                         89            Very Positive  \n",
+       "58286                         96  Overwhelmingly Positive  \n",
+       "27625                         98  Overwhelmingly Positive  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
