updated content model.

--- a/content_based.ipynb
+++ b/content_based.ipynb
@@ -1261,8 +1261,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_recommendation_for_user(user_id, listGames, game_user_have):\n",
-    "    if type(listGames) is not list or len(listGames) == 0:\n",
+    "def make_recommendation_for_user(user_id, game_list, game_user_have):\n",
+    "    if type(game_list) is not list or len(game_list) == 0:\n",
     "        # return empty one\n",
     "        return pd.DataFrame(data=[[user_id] + [\"\"] * n_recommendation], columns=col_names)\n",
     "\n",
